--- a/front/src/views/ui/Freeboard.module.css
+++ b/front/src/views/ui/Freeboard.module.css
@@ -33,22 +33,18 @@ Link {
 .pagination a {
   display: block;
   padding: 8px 12px;
-  border: 1px solid #ddd;
   border-radius: 4px;
   color: #007bff;
   text-decoration: none;
 }
 
 .pagination a:hover {
-  background-color: #eee;
-  border-color: #ddd;
   color: #0056b3;
 }
 
 .pagination .active a {
-  background-color: #007bff;
-  border-color: #007bff;
-  color: white;
+  color: #007bff;
+  font-weight: 600;
 }
 
 .pagination .disabled a {
@@ -56,7 +52,8 @@ Link {
   cursor: not-allowed;
 }
 
-.pagination .disabled a:hover {
-  background-color: transparent;
-  border-color: #ddd;
+.titleLink {
+  text-decoration: none;
+  color: black;
+  font-weight: 700;
 }
