댓글관련 추가. 댓글 가져오기 기능

--- a/front/src/views/ui/BoardComment.module.css
+++ b/front/src/views/ui/BoardComment.module.css
@@ -2,3 +2,15 @@
   font-size: 25px;
   margin-bottom: 10px;
 }
+
+.commentLine {
+  margin: 12px;
+}
+
+.editDelete {
+  display: flex;
+}
+
+.editDelete > div {
+  margin: 10px;
+}
